syntax = "proto3";

import "ion.proto";

option go_package = "github.com/pion/ion/pkg/grpc/biz";

package biz;

service Biz {
  rpc Join(stream JoinRequest) returns (stream JoinReply);
}

message Join {
    string sid = 1;
    string uid = 2;
    bytes info = 3;
    string token = 4;
}

message JoinResult {
    bool success = 1;
    string reason = 2;
}

message Leave {
    string uid = 1;
}

message JoinRequest {
  oneof payload {
    Join join = 1;
    Leave leave = 2;
    ion.Message msg = 4;
  }
}

message JoinReply {
  oneof payload {
        JoinResult result = 1;
        ion.PeerEvent peerEvent = 2;
        ion.StreamEvent streamEvent = 3;
        ion.Message msg = 4;
    }
}
